Separate concrete and PSI namespace commands